app/styles/app.css
.chat-demo-header {
    margin-bottom: 0px;
}

.login-form {
    text-align: center; 
    padding-top: 50px
}

.login-form label {
    margin-right: 5px
}

.login-form button {
    margin-right: 5px
}

.chat-room {
    position: absolute; 
    top: 50px; 
    left: 0; 
    right: 0; 
    bottom: 0;
}

.chat-room > row {
    height: 100%;
}

.chat-room .user-column {
    height: 100%; 
    border-right: 1px solid; 
    border-color: #e7e7e7
}

.chat-room .message-column {
    height: 100%;
}

.chat-room .message-list-container {
    position: absolute; 
    top: 0px; 
    left: 0; 
    right: 0; 
    bottom: 34;
}

.chat-room .message-list {
    height: 100%; 
    overflow: auto;
}

.chat-room .message-input-container {
    position: absolute; 
    left: 0; 
    right: 0; 
    bottom: 0;
}

.chat-room .message {
    font-size: large; 
    border: 1px solid #e7e7e7;
}

.chat-room .message .user-name {
    font-weight: bold; 
    padding-top: 5px; 
    padding-left: 10px;
}

.chat-room .message .msg-text {
    padding-bottom: 5px; 
    padding-left: 10px;
}

.chat-room .user-list {
    height: 100%; 
    overflow: auto;
}

.chat-room .user-item {
    overflow: hidden; 
    text-overflow: ellipsis; 
    font-size: x-large
}

